1/1.11/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-log-svc
spec:
  type: ClusterIP
  selector:
    app: ping-log
  ports:
    - name: ping-pong-port
      protocol: TCP
      port: 2345
      targetPort: 3001
    - name: log-output-port
      protocol: TCP
      port: 2346
      targetPort: 3002
