1/1.11/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-log-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ping-log-svc
            port:
              number: 2345
      - path: /pong
        pathType: Prefix
        backend:
          service:
            name: ping-log-svc
            port:
              number: 2346
